--- a/Randomizer/Randomizer/Views/ListEditionPage.xaml
+++ b/Randomizer/Randomizer/Views/ListEditionPage.xaml
@@ -5,6 +5,7 @@
              xmlns:converters="clr-namespace:Randomizer.Framework.Utils.Converters;assembly=Randomizer.Framework.Utils"
              xmlns:controls="clr-namespace:Randomizer.Framework.Controls.Shared;assembly=Randomizer.Framework.Controls"
              x:Class="Randomizer.Views.ListEditionPage"
+             x:Name="ContentPage"
              Title="{Binding ToolbarTitle}">
 
     <ContentPage.Resources>
@@ -14,16 +15,27 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Name="EditListMenuItem" Order="Primary" IconImageSource="baseline_edit_white_24.png" Text="Edit" Priority="0"  />
-        <ToolbarItem Name="DeleteListMenuItem" Order="Primary" IconImageSource="baseline_delete_outline_white_24.png" Text="Delete" Priority="1"  />
-        <ToolbarItem Name="SaveListMenuItem" Order="Primary" IconImageSource="baseline_check_white_24.png" Text="Save" Priority="2" />
+        <controls:ToolbarItem Name="EditListMenuItem"   Text="Edit"   Priority="0" Order="Primary"
+                              IconImageSource="baseline_edit_white_24.png" 
+                              IsVisible="{Binding IsEditMode, Converter={StaticResource reverseBoolConverter}}" 
+                              ToolbarParent="{x:Reference ContentPage}" />
+
+        <controls:ToolbarItem Name="DeleteListMenuItem" Text="Delete" Priority="1" Order="Primary" 
+                              IconImageSource="baseline_delete_outline_white_24.png"  
+                              IsVisible="{Binding IsEditMode}" 
+                              ToolbarParent="{x:Reference ContentPage}" />
+        
+        <controls:ToolbarItem Name="SaveListMenuItem"   Text="Save"   Priority="2" Order="Primary" 
+                              IconImageSource="baseline_check_white_24.png"  
+                              IsVisible="{Binding IsEditMode}" 
+                              ToolbarParent="{x:Reference ContentPage}" />
     </ContentPage.ToolbarItems>
-    
+
     <ContentPage.Content>
         <StackLayout
             BackgroundColor="#303030"
             Padding="16" >
-            
+
             <Entry 
                 IsVisible="{Binding IsEditMode}"
                 Placeholder="Enter your list name..." 
@@ -45,7 +57,7 @@
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
-             </CollectionView>
+            </CollectionView>
 
             <Entry x:Name="ItemEntry" 
                 IsVisible="{Binding IsEditMode}"
