--- a/Randomizer/Randomizer/Views/ListEditionPage.xaml
+++ b/Randomizer/Randomizer/Views/ListEditionPage.xaml
@@ -15,20 +15,25 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
+        
         <controls:ToolbarItem Name="EditListMenuItem"   Text="Edit"   Priority="0" Order="Primary"
                               IconImageSource="baseline_edit_white_24.png" 
                               IsVisible="{Binding IsEditMode, Converter={StaticResource reverseBoolConverter}}" 
-                              ToolbarParent="{x:Reference ContentPage}" />
+                              ToolbarParent="{x:Reference ContentPage}"
+                              Command="{Binding EditListCommand}"/>
 
         <controls:ToolbarItem Name="DeleteListMenuItem" Text="Delete" Priority="1" Order="Primary" 
                               IconImageSource="baseline_delete_outline_white_24.png"  
-                              IsVisible="{Binding IsEditMode}" 
-                              ToolbarParent="{x:Reference ContentPage}" />
-        
+                              IsVisible="{Binding ShowDeleteListToolbarItem}" 
+                              ToolbarParent="{x:Reference ContentPage}"
+                              Command="{Binding DeleteListCommand}"/>
+
         <controls:ToolbarItem Name="SaveListMenuItem"   Text="Save"   Priority="2" Order="Primary" 
                               IconImageSource="baseline_check_white_24.png"  
                               IsVisible="{Binding IsEditMode}" 
-                              ToolbarParent="{x:Reference ContentPage}" />
+                              ToolbarParent="{x:Reference ContentPage}"
+                              Command="{Binding SaveListCommand}"/>
+        
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -77,16 +82,6 @@
                     </Keyboard>
                 </Entry.Keyboard>
             </Entry>
-
-            <Button
-                IsVisible="{Binding IsEditMode}"
-                HorizontalOptions="StartAndExpand"
-                Text="Save"
-                BackgroundColor="#303030"
-                TextColor="White"
-                BorderColor="White"
-                Command="{Binding SaveListCommand}"
-                BorderWidth="1" />
 
             <Button
                 IsVisible="{Binding IsEditMode, Converter={StaticResource reverseBoolConverter}}"
