--- a/Randomizer/Randomizer/Views/HomePage.xaml
+++ b/Randomizer/Randomizer/Views/HomePage.xaml
@@ -1,25 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:VM="clr-namespace:Randomizer.Framework.ViewModels.Pages;assembly=Randomizer.Framework.ViewModels"
-             BackgroundColor="Black"
-             x:Class="Randomizer.Pages.HomePage">
+             xmlns:ViewModels="clr-namespace:Randomizer.Framework.ViewModels;assembly=Randomizer.Framework.ViewModels"
+             BackgroundColor="#303030"
+             x:Class="Randomizer.Views.HomePage">
     
-    <!-- ViewModel-->
+    <!--This page's ViewModel-->
     <ContentPage.BindingContext>
-        <VM:HomePageViewModel/>
+        <ViewModels:HomePageViewModel/>
     </ContentPage.BindingContext>
     
-    <!--Content-->
     <ContentPage.Content>
         <StackLayout>
             <Label
                 TextColor="White"
                 HorizontalTextAlignment="Center"
-                FontSize="24"
-                Text="Randomizer's HomePage. Work still in progress. You can now play with our 'Add List' page :)"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
+                Text="Randomizer's HomePage. Work in progress. Come back later!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
 
             <Button 
                 Text="Add a new list"
