--- a/Randomizer/Randomizer/Pages/HomePage.xaml
+++ b/Randomizer/Randomizer/Pages/HomePage.xaml
@@ -24,7 +24,6 @@
 
     <!--Content-->
     <ContentPage.Content>
-<<<<<<< HEAD
         <AbsoluteLayout  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
 
             <Grid x:Name="grid"             
@@ -72,7 +71,7 @@
             </Grid>
 
             <Controls:FAB 
-                HasShadow="False" 
+                HasShadow="True" 
                 Margin="16" 
                 AbsoluteLayout.LayoutBounds="1,1,AutoSize,AutoSize"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
@@ -82,28 +81,7 @@
                 ClickedCommand="{Binding NewRandomizerListCommand}"/>
 
         </AbsoluteLayout>
-=======
-        <StackLayout>
-            <Label
-                TextColor="White"
-                HorizontalTextAlignment="Center"
-                FontSize="24"
-                Text="Randomizer's HomePage. Work still in progress. You can now play with our 'Add List' page :D"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-
-            <Button 
-                Text="Add a new list"
-                BackgroundColor="#303030"
-                TextColor="White"
-                BorderColor="White"
-                Command="{Binding NewRandomizerListCommand}"
-                BorderWidth="1" />
-            
-            
-            
-        </StackLayout>
->>>>>>> master
+        
     </ContentPage.Content>
 
 </ContentPage>
