--- a/Randomizer/Randomizer/Pages/HomePage.xaml
+++ b/Randomizer/Randomizer/Pages/HomePage.xaml
@@ -86,6 +86,7 @@
                 Margin="16"
                 AbsoluteLayout.LayoutBounds="1,1,AutoSize,AutoSize"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
+                AutomationId="FloatingButton"
                 ClickedCommand="{Binding NewRandomizerListCommand}"
                 ColorNormal="#484848"
                 ColorPressed="Black"
